# Yuki-Chan-Bot

./: .gitignore  README.md  TODO.md  bot_main.py  config.py  download_model.py  main.py  manage_cache.py  manage_memory.py  manual_memory.py  meme_processor.py  memory_rag.py  message_utils.py  pyproject.toml  requirements.txt  setup.py  test_memory.py  webui.py  yuki_core.py
configs/: README.md
core/: brain.py  engine.py  history.py  history_manager.py  maid.py  prompts.py
modules/diary/: diary_checker.py
modules/memory/: blacklist.txt  rag.py
modules/message/: CQParser.py  CQProtocol.py  GetMeta.py  build_context.py  formatter.py  protocol.py
modules/retina_perception/: attention.py  core.py  prefrontal.py
modules/stickers/: manager.py
modules/vision/: cache.py  processor.py  utils.py
network/: api_request.py  connection.py  sender.py  ws_connection.py  ws_sender.py
providers/: README.md  __init__.py  base.py  dashscope.py  deepseek.py  fallback.py  openai_compatible.py  registry.py  ytea.py
scripts/: batch_train_stickers.py  clear_stickers.py  desire_energy_plot.py  desire_plot.py  flatten.cmd  print_num.py  rag_manager.py  teatop.py  yuki_memoryDB_tool.py
scripts/01_api_test_tools/: compare_teatop_and_deepseek.py  debug_qwen.py  teatop.py  vision_verify.py
scripts/02_energy_tools/: desire_energy_plot.py  desire_plot.py  timetable.py
scripts/03_RAG_Tools/: export_memory.py  import_memory.py  yuki_memoryDB_tool.py
scripts/04_meme_cache_tools/: manage_cache.py  reset_and_import_meme.py
utils/: download_model.py  logger.py
(+2 files in other folders)
